kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: SERVICE_NAME
  name: SERVICE_NAME
  namespace: NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SERVICE_NAME
  template:
    metadata:
      labels:
        app: SERVICE_NAME
    spec:
      containers:
        - image: CONTAINER_IMAGE
          name: SERVICE_NAME
          ports:
            - containerPort: 80
