kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: SERVICE_NAME
  namespace: NAMESPACE
  annotations:
        alb.ingress.kubernetes.io/load-balancer-name: "ALB_NAME"
        alb.ingress.kubernetes.io/healthcheck-path: "/"
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},]'
        alb.ingress.kubernetes.io/target-type: "ip"
        alb.ingress.kubernetes.io/scheme: "LB_SCHEME"
spec:
  ingressClassName: INGRESS_CLASS_NAME
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: SERVICE_NAME
            port:
              number: PORT
